sample-frontend/environment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-frontend
  labels:
    app: angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: acrsandboxet01.azurecr.io/sample-angular
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80               
          initialDelaySeconds: 15 
          periodSeconds: 10        
        readinessProbe:
          httpGet:
            path: /                
            port: 80               
          initialDelaySeconds: 5
          periodSeconds: 5
